# libdatadog

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-3rdparty.yml  build-profiling-ffi.sh  build.Dockerfile  cargo_build.Dockerfile  nuget.config
.github/workflows/: build-mini-agent-node.yml  build_agentless_node_addons.yml  dotnet.yml
alloc/: Cargo.toml
alloc/src/: chain.rs  lib.rs  linear.rs  virtual.rs
bin_tests/tests/: crashtracker_bin_test.rs
build_common/src/: lib.rs
collector/: Cargo.toml
collector/src/: collector.rs  commands.rs  config.rs  events.rs  exporting.rs  lib.rs  metadata.rs  processing.rs  tracing.rs
collector/src/encoding/: msgpack.rs
collector/src/exporting/: agent.rs
crashtracker/: libdatadog-crashtracking-receiver.c
crashtracker/src/: api.rs  collectors.rs  crash_handler.rs  receiver.rs  telemetry.rs
crashtracker/src/collector/: crash_handler.rs  fork_without_atfork.rs  mod.rs
crashtracker/src/crash_info/: telemetry.rs
crashtracker/src/rfc5_crash_info/: telemetry.rs
data-pipeline/: Cargo.toml
data-pipeline-ffi/src/: trace_exporter.rs
data-pipeline-nodejs/: Cargo.toml  README.md  index.js  package.json  test.js
data-pipeline-nodejs/src/: lib.rs
data-pipeline/src/: trace_exporter.rs
data-pipeline/src/span_concentrator/: aggregation.rs
data-pipeline/src/trace_exporter/: mod.rs
ddcommon/: Cargo.toml
ddcommon-ffi/: Cargo.toml  build.rs
ddcommon-ffi/src/: endpoint.rs
ddcommon-net1/: Cargo.toml
ddcommon/src/: lib.rs
ddcommon/src/connector/: mod.rs
ddprof-exporter/: Cargo.toml
ddprof-exporter/src/connector/: mod.rs
ddtelemetry/: Cargo.toml
ddtelemetry-ffi/: Cargo.toml  build.rs  cbindgen.toml
ddtelemetry-ffi/src/builder/: expanded.rs
ddtelemetry/examples/: tm-ping.rs  tm-send-sketch.rs
ddtelemetry/src/: lib.rs
ddtelemetry/src/ipc/: interface.rs
ddtelemetry/src/ipc/setup/: unix.rs
ddtelemetry/src/ipc/sidecar/: unix.rs
ddtelemetry/src/trace/: agent.rs  mod.rs  traces.rs
ddtelemetry/src/trace/normalizer/: mod.rs  normalize_utils.rs  normalizer.rs
ddtelemetry/src/worker/: mod.rs
dogstatsd-client/src/: lib.rs
dogstatsd/src/: aggregator.rs
examples/ffi/: exporter.cpp  profiles.c
ipc/src/platform/unix/: sockets.rs
ipc/src/platform/windows/: mem_handle.rs
logs/: Cargo.toml
logs/src/: logs.rs  main.rs
profiling/: Cargo.toml  build.rs
profiling-ffi/: Cargo.toml  build.rs
profiling-ffi/src/: exporter.rs  profiles.rs
profiling-replayer/src/: main.rs
profiling/benches/: interning_strings.rs
profiling/src/: iter.rs
profiling/src/collections/: string_table.rs
profiling/src/collections/string_table/: mod.rs  wordpress_test_data.rs
profiling/src/exporter/: config.rs  mod.rs
profiling/src/internal/: profile.rs
profiling/src/profile/: api.rs  efficient.proto  mod.rs  pprof.rs  serializer.rs
profiling/src/profile/internal/: function.rs  label.rs  location.rs  mapping.rs  sample.rs  stack_trace.rs  value_type.rs
profiling/src/profile/internal/observation/: observations.rs  trimmed_observation.rs
remote-config/src/fetch/: multitarget.rs
serverless/: Cargo.toml  Dockerfile  README.md  cross_compile_linux_x64.sh  index.d.ts  index.js  package.json
serverless/c_agent_poc/: Dockerfile  Makefile  main.c  main_init.c  user_main.c
serverless/c_poc/: ld_preload.c  main.c
serverless/go_poc/: go.mod  main.go
serverless/logs_tailer/: Cargo.toml  main.rs
serverless/logs_tailer/src/: lib.rs  libc_main.rs  logs_tailer.rs
serverless/node_poc/: index.js  package-lock.json  package.json
serverless/src/: lib.rs  main.rs
serverless/targets/: linux.Dockerfile
sidecar/: .gitignore  Cargo.toml  index.d.ts  index.js  libsidecar-node.linux-x64-gnu.node  node-napi-rs.linux-x64-gnu.node  package-lock.json  package.json
sidecar-ffi/src/: lib.rs
sidecar/src/: config.rs  connections.rs  entry.rs  lib.rs  libc_main.rs  mini_agent.rs  shm_remote_config.rs  sidecar.rs  unix.rs
sidecar/src/data/: v04.rs
sidecar/src/service/: blocking.rs  sidecar_interface.rs  sidecar_server.rs
sidecar/src/setup/: unix.rs
sidecar/src/tracing/: trace_events.rs
spawn_worker/: Cargo.toml  build.rs
spawn_worker/src/: ld_preload_trampoline.c  lib.rs  trampoline.c
spawn_worker/src/trampoline/: exec.c
spawn_worker/src/unix/: spawn.rs  utils.rs
tests/nuget_package/: NugetPackage.csproj
tools/cc_utils/src/: lib.rs
trace-mini-agent/src/: config.rs  env_verifier.rs  mini_agent.rs  trace_processor.rs
trace-utils/: Cargo.toml
trace-utils/src/: config_utils.rs  stats_utils.rs  trace_utils.rs
trace-utils/tests/: test_send_data.rs
trace-utils/tests/snapshots/: compare_v04_trace_snapshot_test.json
windows/: libdatadog-static-debug.csproj  libdatadog-static-release.csproj  libdatadog-static.csproj  libdatadog-static.props  libdatadog.csproj  libdatadog.props  windows.sln
