[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.24", features = ["http1", "runtime", "client"] }
once_cell = "1.18.0"
rmp = "0.8.11"
rmp-serde = "1.1.2"
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "sync"] }
