[package]
name = "data-pipeline-nodejs"
version = "0.1.0"
description = "Bindinngs for data-pipeline crate"
authors = ["julio.gonzalez@datadoghq.com"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
data-pipeline = { path = "../data-pipeline" }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
