[package]
name = "logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
nix = "0.26.2"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = {version = "1.0.153", features=["derive"]}
serde_json = "1.0.94"

[lib]
crate-type = ["lib"]

[[bin]]
name = "logs"
path = "src/main.rs"
