[package]
name = "serverless"
version = "0.0.0"
authors = ["Maxime DAVID <maxime.david@datadoghq.com>"]
edition = "2021"

[dependencies]
ddtelemetry = {path = "../ddtelemetry"}
napi = { version = "2.10.6", default-features = false, features = ["napi4"] }
napi-derive = "2.9.4"
curl = "0.4.44"
serde_json = "1.0.87"
serde = { version = "1.0.145", features = ["derive"] }
prost = "0.6"
queues = "1.0.2"

[build-dependencies]
prost-build = { version = "0.6" }
napi-build = "2.0.1"

[lib]
name = "serverless"
crate-type = ["cdylib"]
