[package]
name = "serverless"
version = "0.0.0"
authors = ["Maxime DAVID <maxime.david@datadoghq.com>"]
edition = "2021"

[dependencies]
napi = { version = "2.10.6", default-features = false, features = ["napi4"] }
napi-derive = "2.9.4"
curl = "0.4.44"
serde_json = "1.0.87"
serde = { version = "1.0.145", features = ["derive"] }
prost = "0.11.6"
datadog-trace-protobuf = { path = "../trace-protobuf" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug-assertions = false

[lib]
name = "serverless"
crate-type = ["cdylib"]

[features]
build_for_node = []
