[package]
name = "serverless"
version = "0.0.0"
authors = ["Maxime DAVID <maxime.david@datadoghq.com>"]
edition = "2021"

[dependencies]
napi = { version = "2.10.6", default-features = false, features = ["napi4"] }
napi-derive = "2.9.4"
curl = "0.4.44"
serde_json = "1.0.87"
serde = { version = "1.0.145", features = ["derive"] }
prost = "0.11.6"
datadog-trace-protobuf = { path = "../trace-protobuf" }
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
napi-build = "2.0.1"

[lib]
name = "serverless"
crate-type = ["cdylib"]

[features]
build_for_node = []
