[package]
edition = "2021"
name = "sidecar"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
smallvec = {version = "1.10", features = ["const_generics"]}
anyhow = {version = "1"}
ddcommon = {path = "../ddcommon"}
ddtelemetry = {path = "../ddtelemetry"}
nix = {version = "0.26"}
spawn_worker = {path = "../spawn_worker"}

# mini agent deps
bytes = {version = "1.4"}
http-body-util = {version = "0.1.0-rc.2"}
hyper = {version = "0.14", features = ["full"]}
hyperlocal = {version = "0.8", features = ["server"]}
pin-project = {version = "1.0"}
pretty_env_logger = {version = "0.4"}
tokio = {version = "1.25", features = ["full"]}
serde = {version = "1.0" }
rmp-serde = {version = "1.1"}
serde_json = { version = "1.0" }
datadog-trace-protobuf = { path = "../trace-protobuf" }
sysinfo = "0.28.3"
chrono = "0.4.24"
napi = { version = "2.10.6", default-features = false, features = ["napi4"], optional = true }
napi-derive = { version = "2.9.4", optional = true }

[build-dependencies]
napi-build = { version = "2.0.1", optional = true }

[dev-dependencies]
tokio-test = {version = "0.4"}

[features]
build_for_node = ["napi", "napi-derive", "napi-build"]
